added plugin manager and a bunch of instructions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,16 @@ bind m \
 bind M \
     set -g mouse off \;\
     display 'Mouse: OFF'
+
+#tmux-continuum
+set -g @continuum-restore 'on' # last saved environments is automatically started
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# >>> should keep this as last line >>>
+run -b '~/.tmux/plugins/tpm/tpm'
+# <<< should keep this as last line <<<
