--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,12 @@ bind M \
     set -g mouse off \;\
     display 'Mouse: OFF'
 
-#tmux-continuum
+# tmux-continuum
 set -g @continuum-restore 'on' # last saved environments is automatically started
+
+###############################################################################
+# Plugins
+###############################################################################
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
