commented out tmux-resurrect, auto-formatted

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,25 +12,25 @@ set -g mouse on
 
 # enable/disable mouse mode
 bind m \
-    set -g mouse on \;\
-    display 'Mouse: ON'
-bind M \
-    set -g mouse off \;\
-    display 'Mouse: OFF'
+       set -g mouse on \;\
+       display 'Mouse: ON'
+       bind M \
+         set -g mouse off \;\
+         display 'Mouse: OFF'
 
 ###############################################################################
 # Plugins
 ###############################################################################
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+         set -g @plugin 'tmux-plugins/tpm'
+         set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # tmux-continuum
-set -g @continuum-restore 'on' # last saved environments is automatically started
+         set -g @continuum-restore 'on' # last saved environments is automatically started
 
 # >>> should keep this as last line >>>
-run -b '~/.tmux/plugins/tpm/tpm'
+         run -b '~/.tmux/plugins/tpm/tpm'
 # <<< should keep this as last line <<<
