added solarized theme and shortcut to switch between windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,10 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
 # reload config file
 bind r source-file ~/.tmux.conf
 
@@ -18,6 +22,9 @@ bind m \
          set -g mouse off \;\
          display 'Mouse: OFF'
 
+# colors
+         set -g default-terminal "xterm-256color"
+
 ###############################################################################
 # Plugins
 ###############################################################################
@@ -25,11 +32,13 @@ bind m \
 # List of plugins
          set -g @plugin 'tmux-plugins/tpm'
          set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# tmux-continuum
-         set -g @continuum-restore 'on' # last saved environments is automatically started
+         set -g @plugin 'seebi/tmux-colors-solarized'
+         set -g @colors-solarized 'dark'
+
+# set -g @plugin 'tmux-plugins/tmux-resurrect
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on' # last saved environments is automatically started
 
 # >>> should keep this as last line >>>
          run -b '~/.tmux/plugins/tpm/tpm'
