updated status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,9 +22,10 @@ bind m \
          set -g mouse off \;\
          display 'Mouse: OFF'
 
-# colors
-         set -g default-terminal "xterm-256color"
-
+# status bar settings
+         set -g status-justify centre # center the windows
+         set -g status-left '#[fg=green]#H'
+         set -g status-right 'CPU: #{cpu_percentage} GPU: #{gpu_percentage} #[fg=blue]%Y-%m-%d #[fg=blue,bg=default]%a%l:%M:%S %p#[UPTIME]'
 ###############################################################################
 # Plugins
 ###############################################################################
@@ -32,6 +33,7 @@ bind m \
 # List of plugins
          set -g @plugin 'tmux-plugins/tpm'
          set -g @plugin 'tmux-plugins/tmux-sensible'
+         set -g @plugin 'tmux-plugins/tmux-cpu'
 
          set -g @plugin 'seebi/tmux-colors-solarized'
          set -g @colors-solarized 'dark'
