--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,10 +22,17 @@ bind m \
          set -g mouse off \;\
          display 'Mouse: OFF'
 
+# colors
+         tmux_conf_theme_24b_colour=false
+         set -g default-terminal "screen-256color"
+
 # status bar settings
          set -g status-justify centre # center the windows
-         set -g status-left '#[fg=green]#H'
-         set -g status-right 'CPU: #{cpu_percentage} GPU: #{gpu_percentage} #[fg=blue]%Y-%m-%d #[fg=blue,bg=default]%a%l:%M:%S %p#[UPTIME]'
+         set -g status-left 'CPU:#{cpu_percentage} GPU:#{gpu_percentage}'
+         set -g status-right '#[fg=blue]%Y/%m/%d %a%l:%M:%S %p#[UPTIME]'
+         set -g status-left-length 20
+         set -g status-right-length 30
+         set -g status-bg '#000000'
 ###############################################################################
 # Plugins
 ###############################################################################
