removed colors because solarized overwrites it

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,16 +23,14 @@ bind m \
          display 'Mouse: OFF'
 
 # colors
-         tmux_conf_theme_24b_colour=false
          set -g default-terminal "screen-256color"
 
 # status bar settings
          set -g status-justify centre # center the windows
          set -g status-left 'CPU:#{cpu_percentage} GPU:#{gpu_percentage}'
-         set -g status-right '#[fg=blue]%Y/%m/%d %a%l:%M:%S %p#[UPTIME]'
+         set -g status-right '%Y/%m/%d %a%l:%M:%S %p#[UPTIME]'
          set -g status-left-length 20
          set -g status-right-length 30
-         set -g status-bg '#000000'
 ###############################################################################
 # Plugins
 ###############################################################################
