updated color of cpu/gpu

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ bind m \
 
 # status bar settings
          set -g status-justify centre # center the windows
-         set -g status-left '#[fg=#888888]CPU: #[fg=yellow]#{cpu_percentage} #[fg=#888888]GPU: #[fg=yellow]#{gpu_percentage}'
+         set -g status-left '#[fg=#888888]CPU: #{cpu_fg_color}#{cpu_percentage} #[fg=#888888]GPU: #{gpu_fg_color}#{gpu_percentage}'
          set -g status-right '%Y/%m/%d %a %l:%M:%S %p#[UPTIME]'
          set -g status-left-length 30
          set -g status-right-length 30
