--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,10 +27,10 @@ bind m \
 
 # status bar settings
          set -g status-justify centre # center the windows
-         set -g status-left '#[fg=#888888]CPU: #{cpu_fg_color}#{cpu_percentage} #[fg=#888888]GPU: #{gpu_fg_color}#{gpu_percentage}'
-         set -g status-right '%Y/%m/%d %a %l:%M:%S %p#[UPTIME]'
-         set -g status-left-length 30
+         set -g status-right '#[fg=#888888]CPU: #{cpu_fg_color}#{cpu_percentage} #[fg=#888888]GPU: #{gpu_fg_color}#{gpu_percentage}'
+         set -g status-left '%Y/%m/%d %a %l:%M:%S %p#[UPTIME] #{prefix_highlight}'
          set -g status-right-length 30
+         set -g status-left-length 30
 ###############################################################################
 # Plugins
 ###############################################################################
@@ -38,6 +38,7 @@ bind m \
 # List of plugins
          set -g @plugin 'tmux-plugins/tpm'
          set -g @plugin 'tmux-plugins/tmux-cpu'
+         set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
          set -g @plugin 'seebi/tmux-colors-solarized'
          set -g @colors-solarized 'dark'
