added sidebar plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,18 +31,25 @@ set -g status-right '#[fg=#888888]CPU: #{cpu_fg_color}#{cpu_percentage} #[fg=#88
 set -g status-left '%Y/%m/%d %a %l:%M:%S %p#[UPTIME] #{prefix_highlight}'
 set -g status-right-length 30
 set -g status-left-length 30
+
 ###############################################################################
 # Plugins
 ###############################################################################
-
-# List of plugins
+# tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+# provides CPU and GPU utilization to tmux status bar
 set -g @plugin 'tmux-plugins/tmux-cpu'
+# provides a symbol to show tmux prefix status
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# Adds a sidebar that displays a tree directory of current path
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 
+# color and theme
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
 
+# uncomment the following three lines if you would like tmux to periodically capture
+#   checkpoints and restore them on system restart
 # set -g @plugin 'tmux-plugins/tmux-resurrect
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @continuum-restore 'on' # last saved environments is automatically started
