fixed mouse mode configuration that is giving errors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,12 +15,8 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # enable/disable mouse mode
-bind m \
-set -g mouse on \;\
-display 'Mouse: ON'
-bind M \
-set -g mouse off \;\
-display 'Mouse: OFF'
+bind m set -g mouse on; display 'Mouse: ON'
+bind M set -g mouse off; display 'Mouse: OFF'
 
 # colors
 set -g default-terminal "screen-256color"
