customized tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Shift arrow to switch windows
+# shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
@@ -15,18 +15,49 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # enable/disable mouse mode
-bind m set -g mouse on; display 'Mouse: ON'
-bind M set -g mouse off; display 'Mouse: OFF'
+bind m \
+    set -g mouse on \;\
+    display 'Mouse: ON'
+bind M \
+    set -g mouse off \;\
+    display 'Mouse: OFF'
 
-# colors
-set -g default-terminal "screen-256color"
+# disable automatically renaming of tabs
+setw -g automatic-rename off
 
 # status bar settings
-set -g status-justify centre # center the windows
-set -g status-right '#[fg=#888888]CPU: #{cpu_fg_color}#{cpu_percentage} #[fg=#888888]GPU: #{gpu_fg_color}#{gpu_percentage}'
-set -g status-left '%Y/%m/%d %a %l:%M:%S %p#[UPTIME] #{prefix_highlight}'
-set -g status-right-length 30
-set -g status-left-length 30
+# to check what the #X do, run `tmux display-message -p "#X"` in the terminal.
+set -g status-position bottom
+set -g status-justify centre
+set -g status-left '#[fg=colour15, bg=colour32] #(whoami)@#T #[fg=colour255, bg=colour235, default]| #S |'
+set -g status-right '#{prefix_highlight}|#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}#[fg=colour255, bg=colour235, default]|#[fg=colour15, bg=colour32] %a %b %e %l:%M:%S%p '
+set -g status-left-length 100
+set -g status-right-length 100
+
+###############################################################################
+# theme
+###############################################################################
+# grey text color: colour255
+# dark background color: colour235
+# blue background color: colour32
+
+set -g default-terminal "screen-256color"
+
+# status bar
+set -g status-style 'bg=colour235'
+
+# window section
+set -g window-status-current-style 'fg=brightgreen bright'
+set -g window-status-current-format '[#I:#W]'
+set -g window-status-style 'fg=colour255 dim'
+set -g window-status-format '#I:#W#F'
+
+# pane border
+set -g pane-border-style 'fg=colour244 dim'
+set -g pane-active-border-style 'fg=green bright'
+
+# message text
+set -g message-style 'bg=red, fg=colour255, bold'
 
 ###############################################################################
 # Plugins
@@ -35,14 +66,21 @@ set -g status-left-length 30
 set -g @plugin 'tmux-plugins/tpm'
 # provides CPU and GPU utilization to tmux status bar
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @cpu_low_fg_color '#[fg=colour15]'
+set -g @cpu_medium_fg_color '#[fg=colour15]'
+set -g @cpu_high_fg_color '#[fg=colour15, bold]'
+set -g @cpu_low_bg_color '#[bg=green]'
+set -g @cpu_medium_bg_color '#[bg=yellow]'
+set -g @cpu_high_bg_color '#[bg=red]'
+set -g @cpu_percentage_format '%5.1f%'
 # provides a symbol to show tmux prefix status
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # Adds a sidebar that displays a tree directory of current path
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # color and theme
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized 'dark'
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @colors-solarized '256'
 
 # uncomment the following three lines if you would like tmux to periodically capture
 #   checkpoints and restore them on system restart
