--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,7 @@ set -g status-right-length 100
 # grey text color: colour255
 # dark background color: colour235
 # blue background color: colour32
+# green highlight: colour46
 
 set -g default-terminal "screen-256color"
 
@@ -47,14 +48,14 @@ set -g default-terminal "screen-256color"
 set -g status-style 'bg=colour235'
 
 # window section
-set -g window-status-current-style 'fg=brightgreen bright'
+set -g window-status-current-style 'fg=colour46 bold'
 set -g window-status-current-format '[#I:#W]'
 set -g window-status-style 'fg=colour255 dim'
 set -g window-status-format '#I:#W#F'
 
 # pane border
 set -g pane-border-style 'fg=colour244 dim'
-set -g pane-active-border-style 'fg=green bright'
+set -g pane-active-border-style 'fg=colour46 bold'
 
 # message text
 set -g message-style 'bg=red, fg=colour255, bold'
