refactored color variables out of the settings, added network stats

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,35 @@
+###############################################################################
+# theme
+###############################################################################
+color_background='colour235'
+color_gray='colour255'
+color_blue='colour32'
+color_red='red'
+color_white='colour15'
+color_green_hi='colour46'
+
+set -g default-terminal 'screen-256color'
+
+# status bar
+set -g status-style "bg=$color_background"
+
+# window section
+set -g window-status-current-style "fg=$color_green_hi bold"
+set -g window-status-current-format '[#I:#W]'
+set -g window-status-style "fg=$color_gray dim"
+set -g window-status-format '#I:#W#F'
+
+# pane border
+set -g pane-border-style "fg=$color_gray dim"
+set -g pane-active-border-style "fg=$color_green_hi bold"
+
+# message text
+set -g message-style "bg=$color_red, fg=$color_gray, bold"
+
+###############################################################################
+# configuration
+###############################################################################
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -26,58 +58,42 @@ bind M \
 setw -g automatic-rename off
 
 # status bar settings
+sep="#[bg=$color_background, fg=$color_gray, bold]|"
+whoami="#[fg=$color_white, bg=$color_blue, bold]#(whoami)@#T"
+session_name="#[bg=$color_background, fg=$color_gray, default]#S"
+time="#[default, fg=$color_white, bg=$color_blue] %a %b %e %l:%M:%S%p #[ ]"
+network="#[default, fg=$color_gray, bg=$color_background][#{upload_speed}] [#{download_speed}]"
 # to check what the #X do, run `tmux display-message -p "#X"` in the terminal.
 set -g status-position bottom
 set -g status-justify centre
-set -g status-left '#[fg=colour15, bg=colour32] #(whoami)@#T #[fg=colour255, bg=colour235, default]| #S |'
-set -g status-right '#{prefix_highlight}|#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}#[fg=colour255, bg=colour235, default]|#[fg=colour15, bg=colour32] %a %b %e %l:%M:%S%p '
+set -g status-left "$who_am_i $sep $session_name $sep"
+set -g status-right "#{prefix_highlight}$sep$network$sep#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}$sep$time"
 set -g status-left-length 100
 set -g status-right-length 100
 
 ###############################################################################
-# theme
-###############################################################################
-# grey text color: colour255
-# dark background color: colour235
-# blue background color: colour32
-# green highlight: colour46
-
-set -g default-terminal "screen-256color"
-
-# status bar
-set -g status-style 'bg=colour235'
-
-# window section
-set -g window-status-current-style 'fg=colour46 bold'
-set -g window-status-current-format '[#I:#W]'
-set -g window-status-style 'fg=colour255 dim'
-set -g window-status-format '#I:#W#F'
-
-# pane border
-set -g pane-border-style 'fg=colour244 dim'
-set -g pane-active-border-style 'fg=colour46 bold'
-
-# message text
-set -g message-style 'bg=red, fg=colour255, bold'
-
-###############################################################################
-# Plugins
+# plugins
 ###############################################################################
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 # provides CPU and GPU utilization to tmux status bar
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @cpu_low_fg_color '#[fg=colour15]'
-set -g @cpu_medium_fg_color '#[fg=colour15]'
-set -g @cpu_high_fg_color '#[fg=colour15, bold]'
+set -g @cpu_low_fg_color "#[fg=color_white]"
+set -g @cpu_medium_fg_color "#[fg=color_white]"
+set -g @cpu_high_fg_color "#[fg=color_white, bold]"
 set -g @cpu_low_bg_color '#[bg=green]'
 set -g @cpu_medium_bg_color '#[bg=yellow]'
 set -g @cpu_high_bg_color '#[bg=red]'
 set -g @cpu_percentage_format '%5.1f%'
 # provides a symbol to show tmux prefix status
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# Adds a sidebar that displays a tree directory of current path
+# adds a sidebar that displays a tree directory of current path
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+# network speed
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+# set -g @net_speed_interfaces 'etho0 eth1'
+set -g @download_speed_format '↓%8s'
+set -g @upload_speed_format '↑%8s'
 
 # color and theme
 # set -g @plugin 'seebi/tmux-colors-solarized'
