removed esc wait time

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,6 +54,9 @@ bind M \
     set -g mouse off \;\
     display 'Mouse: OFF'
 
+# remove wait time on ESC
+set -s escape-time 0
+
 # disable automatically renaming of tabs
 setw -g automatic-rename off
 
