updated color profile again

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,14 @@
 # theme
 ###############################################################################
 color_background='colour235'
+color_black="colour0"
 color_gray='colour255'
 color_blue='colour32'
 color_red='red'
-color_white='colour15'
+color_orange='colour215'
+color_green='green'
 color_green_hi='colour46'
+color_white='colour15'
 
 set -g default-terminal 'screen-256color'
 
@@ -65,12 +68,13 @@ sep="#[bg=$color_background, fg=$color_gray, bold]|"
 whoami="#[fg=$color_white, bg=$color_blue, bold]#(whoami)@#T"
 session_name="#[bg=$color_background, fg=$color_gray, default]#S"
 time="#[default, fg=$color_white, bg=$color_blue] %a %b %e %l:%M:%S%p #[ ]"
+cpu="#[default]#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}"
 network="#[default, fg=$color_gray, bg=$color_background][#{upload_speed}] [#{download_speed}]"
 # to check what the #X do, run `tmux display-message -p "#X"` in the terminal.
 set -g status-position bottom
 set -g status-justify centre
 set -g status-left "$who_am_i $sep $session_name $sep"
-set -g status-right "#{prefix_highlight}$sep$network$sep#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}$sep$time"
+set -g status-right "#{prefix_highlight}$sep$network$sep$cpu$sep$time"
 set -g status-left-length 100
 set -g status-right-length 100
 
@@ -84,12 +88,14 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @cpu_low_fg_color "#[fg=color_white]"
 set -g @cpu_medium_fg_color "#[fg=color_white]"
 set -g @cpu_high_fg_color "#[fg=color_white, bold]"
-set -g @cpu_low_bg_color '#[bg=green]'
-set -g @cpu_medium_bg_color '#[bg=yellow]'
-set -g @cpu_high_bg_color '#[bg=red]'
+set -g @cpu_low_bg_color "#[bg=$color_green]"
+set -g @cpu_medium_bg_color "#[bg=$color_orange]"
+set -g @cpu_high_bg_color "#[bg=$color_red]"
 set -g @cpu_percentage_format '%5.1f%'
 # provides a symbol to show tmux prefix status
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_fg "$color_black"
+set -g @prefix_highlight_bg "$color_orange"
 # adds a sidebar that displays a tree directory of current path
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 # network speed
