fixed typo in whoami

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,7 +65,7 @@ setw -g automatic-rename off
 
 # status bar settings
 sep="#[bg=$color_background, fg=$color_gray, bold]|"
-whoami="#[fg=$color_white, bg=$color_blue, bold]#(whoami)@#T"
+whoami="#[fg=$color_white, bg=$color_blue, bold] #(whoami)@#T"
 session_name="#[bg=$color_background, fg=$color_gray, default]#S"
 time="#[default, fg=$color_white, bg=$color_blue] %a %b %e %l:%M:%S%p #[ ]"
 cpu="#[default]#{cpu_fg_color}#{cpu_bg_color}#{cpu_percentage} #{cpu_icon}"
@@ -73,7 +73,7 @@ network="#[default, fg=$color_gray, bg=$color_background][#{upload_speed}] [#{do
 # to check what the #X do, run `tmux display-message -p "#X"` in the terminal.
 set -g status-position bottom
 set -g status-justify centre
-set -g status-left "$who_am_i $sep $session_name $sep"
+set -g status-left "$whoami $sep $session_name $sep"
 set -g status-right "#{prefix_highlight}$sep$network$sep$cpu$sep$time"
 set -g status-left-length 100
 set -g status-right-length 100
