updated medium load text color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # provides CPU and GPU utilization to tmux status bar
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @cpu_low_fg_color "#[fg=color_white]"
-set -g @cpu_medium_fg_color "#[fg=color_white]"
+set -g @cpu_medium_fg_color "#[fg=color_black]"
 set -g @cpu_high_fg_color "#[fg=color_white, bold]"
 set -g @cpu_low_bg_color "#[bg=$color_green]"
 set -g @cpu_medium_bg_color "#[bg=$color_orange]"
